@@ -191,6 +191,7 @@ Version 1.5
  - Add Popp: Z-Wave CO Detector (Nechry)
  - Issue #1258 - Add PAN16 Smart energy plug in switch from krejkrejkrej (Nechry)
  - Issue #1259 - wrong manufacturer DOMUX in XML from michapr (Nechry)
+ - Add Zipato Bulb 2 (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
